--- a/src/styles/NavigateBarComponent.css
+++ b/src/styles/NavigateBarComponent.css
@@ -3,7 +3,7 @@
 }
 
 .logo {
-  margin-left: 180px;
+  /* margin-left: 180px; */
 }
 
 .nav-link {
@@ -14,5 +14,5 @@
   width: 60px;
   border-radius: 50%;
   margin-left: 20px;
-  margin-right: 180px;
+  /* margin-right: 180px; */
 }
