[Update] date picker

--- a/src/styles/ProfileAboutComponent.css
+++ b/src/styles/ProfileAboutComponent.css
@@ -70,3 +70,9 @@ input:enabled {
   background-color: #1c2733;
   border: 0px;
 }
+
+.input-date-picker {
+  width: 100%;
+  text-align: left;
+  margin-left: 10px;
+}
